# zed-rmate-server

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
services/: zed-rmate-server.service
src/: main.rs  protocol.rs  server.rs
