[package]
name = "zed-rmate-server"
version = "0.2.0"
authors = ["Christian W. Zuckschwerdt <christian@zuckschwerdt.org>"]
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
clap = { version = "4", features = ["derive", "env", "suggestions", "color", "wrap_help"] }

futures = "0.3"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "fs", "net", "io-util", "sync", "time"] }

tempfile = "3"
notify = "6"
async-process = "2.2.3"
