[package]
name = "zed-rmate-server"
version = "0.4.1"
authors = ["Christian W. Zuckschwerdt <christian@zuckschwerdt.org>"]
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
clap = { version = "4", features = ["derive", "env", "suggestions", "color", "wrap_help"] }

futures = "0.3"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "fs", "net", "io-util", "sync", "time"] }

tempfile = "3"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
async-process = "2.2.3"
